--- a/index.html
+++ b/index.html
@@ -10,36 +10,16 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-menu">
-      <li class="nav-item">North
-        <ul class="dropdown">
-          <li>Northern Frontier</li>
-          <li>Silvercrest Mountains</li>
-        </ul>
-      </li>
-      <li class="nav-item">South
-        <ul class="dropdown">
-          <li>Sunridge Coast</li>
-          <li>Velis Valley</li>
-        </ul>
-      </li>
-      <li class="nav-item">East
-        <ul class="dropdown">
-          <li>Eastern Steppe</li>
-          <li>Halefort Industrial Zone</li>
-        </ul>
-      </li>
-      <li class="nav-item">West
-        <ul class="dropdown">
-          <li>Glenmoor Highlands</li>
-          <li>Lakeshore Province</li>
-        </ul>
-      </li>
-      <li class="nav-item">Central
-        <ul class="dropdown">
-          <li>New Corinth District</li>
-          <li>Midland Plains</li>
-        </ul>
-      </li>
+      <li class="nav-item">Northern Frontier</li>
+      <li class="nav-item">Silvercrest Mountains</li>
+      <li class="nav-item">Sunridge Coast</li>
+      <li class="nav-item">Velis Valley</li>
+      <li class="nav-item">Eastern Steppe</li>
+      <li class="nav-item">Halefort Industrial Zone</li>
+      <li class="nav-item">Glenmoor Highlands</li>
+      <li class="nav-item">Lakeshore Province</li>
+      <li class="nav-item">New Corinth District</li>
+      <li class="nav-item">Midland Plains</li>
       <li class="nav-item">Nearby News</li>
     </ul>
   </nav>
@@ -56,8 +36,8 @@
   <section class="live-article">
     <h2 class="live-indicator">🔴 Live</h2>
     <div class="live-content">
-      <h2 id="liveTitle">Loading...</h2>
-      <p id="liveDescription">Please wait...</p>
+      <h2 id="liveTitle">EastVeil-SamVill Relations Deteriorate</h2>
+      <p id="liveDescription">EastVeil retaliates by banning three nations from its emergency services pact.</p>
       <button id="readMoreLive" class="read-more">Read More</button>
     </div>
   </section>
@@ -65,7 +45,30 @@
   <!-- Articles Grid -->
   <main class="main">
     <div id="newsContainer" class="news-grid">
-      <!-- Articles will be dynamically inserted here -->
+      <!-- Article 1 -->
+      <div class="news-item">
+        <img src="images/article1.jpg" alt="First Snow">
+        <div class="news-item-content">
+          <h2>First Snow of the Winter Storm Blankets Eastern Steppe</h2>
+          <p>Eastern Steppe begins to see the impact of a severe winter storm.</p>
+        </div>
+      </div>
+      <!-- Article 2 -->
+      <div class="news-item">
+        <img src="images/article2.jpg" alt="Alliance Crumbles">
+        <div class="news-item-content">
+          <h2>Alliance Crumbles Amid Power Struggles</h2>
+          <p>Internal disputes lead to a major shift in global power dynamics.</p>
+        </div>
+      </div>
+      <!-- Article 3 -->
+      <div class="news-item">
+        <img src="images/article3.jpg" alt="Peace Talks">
+        <div class="news-item-content">
+          <h2>EastVeil and Chlovill Leaders Commit to Peace</h2>
+          <p>Leaders reaffirm their commitment to neutrality and bilateral cooperation.</p>
+        </div>
+      </div>
     </div>
   </main>
 
